# hacknation-ai

./: IMPLEMENTATION.md  README.md  example_usage.py  main.py  pyproject.toml  requirements.txt
app/: agent_manager.py  context.py  instructions.md  tools.py
backend/: .example.env  .gitignore  FILTERS_DOCUMENTATION.md  check_vector_db.py  index.html  ingest_items_csv.py  main.py  pyproject.toml  requirements.txt  test.html
backend/app/: agent_manager.py  form_agent.py  instructions.md  logger.py  main.py  rag_pipeline.py  shopping_agent.py  shopping_list_agent.py  tree_agent.py  voice_agent.py
backend/app/models/: __init__.py  context.py  outputs.py
backend/app/tools/: __init__.py  implementations.py  registry.py
backend/mocking_data/: generate_retailer_logos.py  images.py  items.csv
frontend/: chat.js  index.html  pubspec.yaml
frontend/.cursor/rules/: Frontend-Rule.mdc
frontend/assets/: 11929-22748-simple-loading.riv  1658-3268-flag-animation.riv  2569-5232-calling-animation.riv  3725-7780-waiing-animation.riv  7552-15074-loading-indicator-remix.riv  checkout_loading_success.riv  checkout_vehicle_loader.riv  empty_cart_sad_blob.riv  order_done_confetti.riv  order_done_donecheck.riv  order_done_success_v2.riv
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: debug_log.dart  main.dart
frontend/lib/config/: app_constants.dart  app_theme.dart
frontend/lib/model/: api_models.dart  cart_models.dart  chat_message.dart  chat_models.dart
frontend/macos/Runner/: Info.plist
frontend/test/: widget_test.dart
(+48 files in other folders)
