[project]
name = "hacknation-ai"
version = "0.1.0"
description = "FastAPI chat agent endpoints"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "openai>=1.51.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.3.1",
    "chromadb>=0.4.22",
    "pypdf2>=3.0.1",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.6",
    "python-pexels>=1.1",
    "pexels-api>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
